--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/cli": "^18.0.4",
     "@angular/compiler-cli": "^18.0.3",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.12",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
