--- a/misc/nginx/default.conf
+++ b/misc/nginx/default.conf
@@ -23,7 +23,7 @@ gzip_types text/plain
            image/svg+xml;
 
 server {
-    server_name share.waliot.com;
+    server_name byys.online;
 
     listen 80;
     listen [::]:80;
@@ -32,7 +32,7 @@ server {
 }
 
 server {
-    server_name share.waliot.com;
+    server_name byys.online;
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
