--- a/misc/nginx/default.conf
+++ b/misc/nginx/default.conf
@@ -23,30 +23,13 @@ gzip_types text/plain
            image/svg+xml;
 
 server {
-    server_name byys.online;
+    server_name _;
 
     listen 80;
     listen [::]:80;
 
-    return 301 https://$server_name$request_uri;
-}
-
-server {
-    server_name byys.online;
-
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-
-    ssl_certificate     /etc/nginx/certificates/selfsigned.crt;
-    ssl_certificate_key /etc/nginx/certificates/selfsigned.key;
-
     root /usr/share/nginx/html;
     index index.html;
-
-    location ~ /index.html|.*\.json$ {
-        expires -1;
-        add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-    }
 
     location / {
         try_files $uri $uri/ /index.html =404;
