--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": {
-              "base": "dist/bis-worker-frontend"
-            },
+            "outputPath": "dist",
             "index": "src/index.html",
             "polyfills": [
               "zone.js"
